# MPQC_pkg

./: CMakeLists.txt  README.md  package.xml
include/: definicoes.hpp  expParam.hpp  funcoes_auxiliares.hpp  lqrdados.hpp  mpcdados.hpp  parametrizacao.h  simdados.hpp
include/Eigen/: reminder.txt
launch/: mpc_px4.launch
outputs/: plot_from_file.py  readme.txt
src/: expParam.cpp  funcoes_auxiliares.cpp  lqrdados.cpp  main_LQR.cpp  main_LQR_backup.cpp  main_MPC.cpp  main_MPC_backup.cpp  mpcdados.cpp  offb_node.cpp  pid_node.cpp
